# MARK2_reisenderBackend

./: .bashrc  .gitignore  README.md  SPconfig.json  app.py  camData.json  install.sh  launch.py  logrotate.d-reisender-backend  machineManager.py  machineManager_archive.py  mark2-app.service  mark2-pico-bridge.service  mark2-reisender-backend.service  mark2-run.sh  mark2-services  mechineManager.py  motorController_Fake.py  motorManager.py  motorModbus.py  motorNewController.py  my.rc  openapi.json  pyproject.toml  reisender-backend.service  remider  run.sh  temp.py  utils.py
html/: index.html  testPage.html
html/css/: index.css  resultCard.css
html/js/: index.js  indexArchive.js  myWsClient.js
html/numPic/: numPic.pptx
mechineSimulator/: pubSome.py  simulatedMechine.py  subAll.py  testPLace3.py  testPlace.py  testPlace2.py
mechineSimulator/models/: mechineBase.py  mechineCamera.py  mechineCamera_v2.py
motorNode/: bridge_config.py  lower_computer_api.py  main_bridge_app.py  motor manager.py  mqtt_client_handler.py  pico_bridge.py  pico_bridge_v2.py  run_bridge.py  serial_communicator.py
mqttBroker/ubuntu/: nanomq
mqttBroker/win64/lib/: nng.lib
mqttBroker/win64/lib/cmake/nng/: nng-config.cmake  nng-targets-release.cmake  nng-targets.cmake
mqttBroker/win64/share/nanomq/cmake/: nanomqConfig-release.cmake  nanomqConfig.cmake
tools/: detectUSB.sh  simpleBase64.py  simpleCamStream.py  simpleUSBTest.py  simple_mult_stream.py  simple_stream.py  simpletest.py  testImgData.json  testSerial.py
